--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "sass": "^1.32.11"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.25.0",
+    "eslint-plugin-vue": "^7.9.0",
     "jest": "^26.6.3",
     "vue-jest": "^3.0.4"
   }
